# gamelibs-sqlite

./: CMakeLists.txt  Makefile  meson.build  meson_options.txt
include/: sqlite_cfg_meson.h.in
msvc/: sqlite.vcxproj  sqlite.vcxproj.filters
