option('SQLITE_DEFAULT_AUTOMATIC_INDEX', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_DEFAULT_AUTOVACUUM', type: 'integer', min: -1, max : 2, value: -1)
option('SQLITE_DEFAULT_CACHE_SIZE', type: 'integer', value: -1)
option('SQLITE_DEFAULT_FILE_FORMAT', type: 'integer', min: -1, max : 4, value: -1) 
option('SQLITE_DEFAULT_FILE_PERMISSIONS', type: 'integer', value: -1)
option('SQLITE_DEFAULT_FOREIGN_KEYS', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_DEFAULT_MMAP_SIZE', type: 'integer', value: -1)
option('SQLITE_DEFAULT_JOURNAL_SIZE_LIMIT', type: 'integer', value: -1)
option('SQLITE_DEFAULT_LOCKING_MODE', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_DEFAULT_LOOKASIDE_HIGH', type : 'integer', value: -1)
option('SQLITE_DEFAULT_LOOKASIDE_LOW', type : 'integer', value: -1)
option('SQLITE_DEFAULT_MEMSTATUS', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_DEFAULT_PCACHE_INITSZ', type: 'integer', value: -1)
option('SQLITE_DEFAULT_PAGE_SIZE', type: 'integer', value: -1)
option('SQLITE_DEFAULT_SYNCHRONOUS', type: 'integer', min: -1, max : 3, value: -1)
option('SQLITE_DEFAULT_WAL_SYNCHRONOUS', type: 'integer', min: -1, max : 3, value: -1)
option('SQLITE_DEFAULT_WAL_AUTOCHECKPOINT', type: 'integer', value: -1)
option('SQLITE_DEFAULT_WORKER_THREADS', type: 'integer', value: -1)
option('SQLITE_DQS', type: 'integer', value: -1)
option('SQLITE_FTS3_MAX_EXPR_DEPTH', type: 'integer', value: -1)
option('SQLITE_LIKE_DOESNT_MATCH_BLOBS', type : 'feature', value : 'disabled')
option('SQLITE_MAX_MEMORY', type: 'integer', value: -1)
option('SQLITE_MAX_MMAP_SIZE', type: 'integer', value: -1)
option('SQLITE_MAX_SCHEMA_RETRY', type: 'integer', value: -1)
option('SQLITE_MAX_WORKER_THREADS', type: 'integer', value: -1)
option('SQLITE_MEMDB_DEFAULT_MAXSIZE', type: 'integer', value: -1)
option('SQLITE_MINIMUM_FILE_DESCRIPTOR', type: 'integer', value: -1)
option('SQLITE_POWERSAFE_OVERWRITE', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_PRINTF_PRECISION_LIMIT', type: 'integer', value: -1)
option('SQLITE_QUERY_PLANNER_LIMIT', type: 'integer', value: -1)
option('SQLITE_QUERY_PLANNER_LIMIT_INCR', type: 'integer', value: -1)
option('SQLITE_REVERSE_UNORDERED_SELECTS', type : 'feature', value : 'disabled')
option('SQLITE_SORTER_PMASZ', type: 'integer', value: -1)
option('SQLITE_STMTJRNL_SPILL', type: 'integer', value: -1)
option('SQLITE_WIN32_MALLOC', type : 'feature', value : 'disabled')
option('YYSTACKDEPTH', type: 'integer', value: -1)

option('SQLITE_MAX_ATTACHED', type: 'integer', value: -1)
option('SQLITE_MAX_COLUMN', type: 'integer', value: -1)
option('SQLITE_MAX_COMPOUND_SELECT', type: 'integer', value: -1)
option('SQLITE_MAX_EXPR_DEPTH', type: 'integer', value: -1)
option('SQLITE_MAX_FUNCTION_ARG', type: 'integer', value: -1)
option('SQLITE_MAX_LENGTH', type: 'integer', value: -1)
option('SQLITE_MAX_LIKE_PATTERN_LENGTH', type: 'integer', value: -1)
option('SQLITE_MAX_PAGE_COUNT', type: 'integer', value: -1)
option('SQLITE_MAX_SQL_LENGTH', type: 'integer', value: -1)
option('SQLITE_MAX_VARIABLE_NUMBER', type: 'integer', value: -1)

option('SQLITE_4_BYTE_ALIGNED_MALLOC', type : 'feature', value : 'disabled')
option('SQLITE_CASE_SENSITIVE_LIKE', type : 'feature', value : 'disabled')
option('SQLITE_DIRECT_OVERFLOW_READ', type : 'feature', value : 'disabled')
option('SQLITE_HAVE_ISNAN', type : 'feature', value : 'disabled')
option('SQLITE_MAX_ALLOCATION_SIZE', type: 'integer', value: -1)
option('SQLITE_OS_OTHER', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_SECURE_DELETE', type : 'feature', value : 'disabled')
option('SQLITE_THREADSAFE', type: 'integer', min: -1, max : 2, value: -1)
option('SQLITE_TEMP_STORE', type: 'integer', min: -1, max : 3, value: -1)
option('SQLITE_TRACE_SIZE_LIMIT', type: 'integer', value: -1)
option('SQLITE_TRUSTED_SCHEMA', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_USE_URI', type : 'feature', value : 'disabled')

option('SQLITE_ALLOW_URI_AUTHORITY', type : 'feature', value : 'disabled')
option('SQLITE_ALLOW_COVERING_INDEX_SCAN', type: 'integer', min: -1, max : 1, value: -1)
option('SQLITE_ENABLE_8_3_NAMES', type: 'integer', min: -1, max : 2, value: -1)
option('SQLITE_ENABLE_API_ARMOR', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_ATOMIC_WRITE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_BATCH_ATOMIC_WRITE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_BYTECODE_VTAB', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_COLUMN_METADATA', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_DBPAGE_VTAB', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_DBSTAT_VTAB', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_EXPLAIN_COMMENTS', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_FTS3', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_FTS3_PARENTHESIS', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_FTS3_TOKENIZER', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_FTS4', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_FTS5', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_GEOPOLY', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_HIDDEN_COLUMNS', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_ICU', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_IOTRACE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_MATH_FUNCTIONS', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_LOCKING_STYLE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_MEMORY_MANAGEMENT', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_MEMSYS3', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_MEMSYS5', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_NORMALIZE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_NULL_TRIM', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_OFFSET_SQL_FUNC', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_PREUPDATE_HOOK', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_QPSG', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_RBU', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_RTREE', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_SESSION', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_SNAPSHOT', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_SORTER_REFERENCES', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_STMT_SCANSTATUS', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_STMTVTAB', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_SQLLOG', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_STAT4', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_UPDATE_DELETE_LIMIT', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_UNKNOWN_SQL_FUNCTION', type : 'feature', value : 'disabled')
option('SQLITE_ENABLE_UNLOCK_NOTIFY', type : 'feature', value : 'disabled')
option('SQLITE_SOUNDEX', type : 'feature', value : 'disabled')
option('SQLITE_USE_ALLOCA', type : 'feature', value : 'disabled')
option('SQLITE_USE_FCNTL_TRACE', type : 'feature', value : 'disabled')
option('SQLITE_USE_SEH', type : 'feature', value : 'disabled')
option('SQLITE_HAVE_ZLIB', type : 'feature', value : 'disabled')
option('YYTRACKMAXSTACKDEPTH', type : 'feature', value : 'disabled')

option('SQLITE_DISABLE_LFS', type : 'feature', value : 'disabled')
option('SQLITE_DISABLE_DIRSYNC', type : 'feature', value : 'disabled')
option('SQLITE_DISABLE_FTS3_UNICODE', type : 'feature', value : 'disabled')
option('SQLITE_DISABLE_FTS4_DEFERRED', type : 'feature', value : 'disabled')
option('SQLITE_DISABLE_INTRINSIC', type : 'feature', value : 'disabled')
option('SQLITE_DISABLE_PAGECACHE_OVERFLOW_STATS', type : 'feature', value : 'disabled')

option('SQLITE_OMIT_ALTERTABLE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_ANALYZE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_ATTACH', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_AUTHORIZATION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_AUTOINCREMENT', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_AUTOMATIC_INDEX', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_AUTORESET', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_AUTOVACUUM', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_BETWEEN_OPTIMIZATION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_BLOB_LITERAL', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_CASE_SENSITIVE_LIKE_PRAGMA', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_CAST', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_CHECK', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_COMPILEOPTION_DIAGS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_COMPLETE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_COMPOUND_SELECT', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_CTE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_DATETIME_FUNCS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_DECLTYPE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_DEPRECATED', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_DESERIALIZE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_EXPLAIN', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_FLAG_PRAGMAS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_FLOATING_POINT', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_FOREIGN_KEY', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_GENERATED_COLUMNS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_GET_TABLE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_HEX_INTEGER', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_INCRBLOB', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_INTEGRITY_CHECK', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_INTROSPECTION_PRAGMAS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_JSON', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_LIKE_OPTIMIZATION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_LOAD_EXTENSION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_LOCALTIME', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_LOOKASIDE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_MEMORYDB', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_OR_OPTIMIZATION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_PAGER_PRAGMAS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_PRAGMA', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_PROGRESS_CALLBACK', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_QUICKBALANCE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_REINDEX', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_SCHEMA_PRAGMAS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_SCHEMA_VERSION_PRAGMAS', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_SHARED_CACHE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_SUBQUERY', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_TCL_VARIABLE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_TEMPDB', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_TRACE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_TRIGGER', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_TRUNCATE_OPTIMIZATION', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_UTF16', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_VACUUM', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_VIEW', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_VIRTUALTABLE', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_WAL', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_WINDOWFUNC', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_WSD', type : 'feature', value : 'disabled')
option('SQLITE_OMIT_XFER_OPT', type : 'feature', value : 'disabled')
option('SQLITE_UNTESTABLE', type : 'feature', value : 'disabled')
option('SQLITE_ZERO_MALLOC', type : 'feature', value : 'disabled')

option('SQLITE_DEBUG', type : 'feature', value : 'disabled')
option('SQLITE_MEMDEBUG', type : 'feature', value : 'disabled')

option('SQLITE_WIN32_HEAP_CREATE', type : 'feature', value : 'disabled')
option('SQLITE_WIN32_MALLOC_VALIDATE', type : 'feature', value : 'disabled')

option('apiCall', type : 'combo', choices : ['', '__cdecl', '__stdcall'], value : '')
